# recognize-anything

./: .dockerignore  Dockerfile  README.md  inference_ram_plus_openset.py  pyproject.toml  requirements.txt  run_inference.sh  setup.cfg
ram/: __init__.py  inference.py
ram/models/: ram_plus.py  utils.py
